fixed socials spacing

--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ h2 {
 
 .socials {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     max-width: 60%;
     margin-left: 20%;
     margin-top: 30px;
